Theme Directory: Prevent Downloads Per Day chart from overflowing container when page is resized to be narrower.
Props nidhidhandhukiya, coffee2code.
Fixes #6179.


git-svn-id: https://meta.svn.wordpress.org/sites/trunk@13049 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-themes/css/components/_main.scss
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-themes/css/components/_main.scss
@@ -679,6 +679,11 @@ body.author .theme-browser .theme .theme-author  {
 	margin: 1.5em 0 0 0;
 }
 
+.theme-wrap #theme-download-stats-responsive {
+	overflow-x: scroll;
+	overflow-y: hidden;
+}
+
 .theme-wrap .theme-devs,
 .theme-wrap .theme-support,
 .theme-wrap .theme-report,
